crates/rlf-macros/tests/fail/phrase_variant_block.rs
use rlf::rlf;

rlf! {
    cards($n) = { one: "{$n} card", other: "{$n} cards" };
}

fn main() {}
