crates/rlf-macros/tests/fail/phrase_variant_block.stderr
error: phrase 'cards' cannot have a variant block — use :match for branching
 --> tests/fail/phrase_variant_block.rs:4:5
  |
4 |     cards($n) = { one: "{$n} card", other: "{$n} cards" };
  |     ^^^^^
